# tango_admin

./: CMakeLists.txt  Makefile  Makefile.am  README.md  anyoption.cpp  tango_admin.cpp
tools/tango_admin/tags/Release-1.8/: tango_admin.cpp
tools/tango_admin/tags/Release-1.9/: Makefile  anyoption.cpp
tools/tango_admin/tags/Release1.10/: Makefile.am  anyoption.cpp
tools/tango_admin/tags/Release1.11/: Makefile  anyoption.h  tango_admin.cpp
tools/tango_admin/tags/Release_1.12/: Makefile.am
tools/tango_admin/tags/Release_1.13/: Makefile  tango_admin.cpp
tools/tango_admin/tags/Release_1_1/: anyoption.h
tools/tango_admin/tags/Release_1_2/: anyoption.cpp  tango_admin.cpp
tools/tango_admin/tags/Release_1_4/: tango_admin.cpp
tools/tango_admin/tags/Release_1_5/: tango_admin.cpp
tools/tango_admin/tags/Release_1_6/: anyoption.h
tools/tango_admin/tags/Release_1_6_distrib/: Makefile.in  tango_admin.cpp
tools/tango_admin/tags/Release_1_7/: tango_admin.cpp
tools/tango_admin/trunk/: Makefile.am  Makefile.in  tango_admin.cpp
